feat: change update endpoint (#232)
feat: dataset-version update endpoint doesn't update the state anymore.

It's now used to update the following fields : 
* producer (mandatory for CLOSED dataset)
* additionalInformation
* productionDate (mandatory for CLOSED dataset)

Added the DatasetVersionInformationsDto for update operations

Data-virt now only use kafka-event, activate and deactivate endpoint to update dataset-version state

Dataset-version state can now only be change via dataset-version /activate and /deactivate endpoint, or kafka event only internaly used.

link #182
